--- a/src/assets/css/hero.css
+++ b/src/assets/css/hero.css
@@ -3,6 +3,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  overflow-x: hidden;
+}
+
 .hero {
   background: linear-gradient(to right, #002B5C, #0057b7);
   color: #ffffff;
@@ -11,22 +15,43 @@
 }
 
 .hero h1 {
-  font-size: 3rem;
-  margin-bottom: 1.5rem;
+  font-size: 2rem; /* Adjusted for smaller screens */
+  margin-bottom: 1rem;
+}
+
+@media (min-width: 768px) {
+  .hero h1 {
+    font-size: 3rem; /* Larger size for medium and up */
+    margin-bottom: 1.5rem;
+  }
 }
 
 .hero p {
-  font-size: 1.2rem;
-  margin-bottom: 2rem;
+  font-size: 1rem; /* Smaller text on small screens */
+  margin-bottom: 1.5rem;
+}
+
+@media (min-width: 768px) {
+  .hero p {
+    font-size: 1.2rem; /* Larger text on larger screens */
+    margin-bottom: 2rem;
+  }
 }
 
 .hero button {
   background-color: #ffda00;
   color: #002B5C;
   padding: 0.75rem 2rem;
-  font-size: 1.2rem;
+  font-size: 1rem;
   border-radius: 5px;
   transition: background-color 0.3s ease;
+}
+
+@media (min-width: 768px) {
+  .hero button {
+    padding: 1rem 3rem; /* Larger button for medium and larger screens */
+    font-size: 1.2rem;
+  }
 }
 
 .hero button:hover {
@@ -35,10 +60,22 @@
 
 /* In your header.css or a new CSS file */
 .retro-text {
-  font-size: 5rem; /* Adjust size if needed */
+  font-size: 2rem; /* Adjust size for smaller screens */
   color: #ffeb3b; /* Bright yellow color */
   position: relative; /* Position for pseudo-elements */
   animation: bulb 1.5s infinite alternate; /* Apply bulb effect animation */
+}
+/* hero.css */
+/* .retro-text {
+  font-family: 'Retro', sans-serif;
+  color: white;
+} */
+
+
+@media (min-width: 768px) {
+  .retro-text {
+    font-size: 3rem; /* Larger size for medium and up */
+  }
 }
 
 /* Sparkle effect */
@@ -89,4 +126,6 @@
       0 0 0px rgba(255, 235, 59, 0.4);
   }
 }
-
+.slick-list {
+  overflow: hidden;  /* Prevents slider overflow */
+}
