--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -40,7 +40,7 @@ body {
   height: 100%;
   margin: 0;
   /* display: flex; */
-  place-items: center;
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
